--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section class="author-section">
             <div class="author-card">
                 <div class="author-avatar">
-                    <img src="https://ui-avatars.com/api/?name=Егор+Петров&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Егор Петров" onerror="this.src='https://ui-avatars.com/api/?name=Егор+Петров&size=120&background=4f46e5&color=fff&bold=true'">
+                    <img src="https://ui-avatars.com/api/?name=Анастасия+Белов&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Анастасия Белов" onerror="this.src='https://ui-avatars.com/api/?name=Анастасия+Белов&size=120&background=4f46e5&color=fff&bold=true'">
                 </div>
                 <div class="author-info">
-                    <h2 class="author-name">Егор Петров</h2>
-                    <p class="author-description">Алексей Иванов — опытный эксперт в области гостиничного и туристического бизнеса с более чем 15-летним стажем работы. Он является автором множества публикаций на тему лучших мест для отдыха и ведет активную деятельность по анализу гостиничного сервиса в России и за рубежом. Алексей имеет степень магистра в области гостиничного менеджмента и регулярно выступает на конференциях, делясь своим опытом и знаниями о современных тенденциях в туристической отрасли. Его последняя статья о лучших отелях Сочи основана на реальных отзывах посетителей, что подтверждает его глубокое понимание потребностей современных туристов.</p>
+                    <h2 class="author-name">Анастасия Белов</h2>
+                    <p class="author-description">Эксперт в области гостиничного бизнеса и туристической индустрии с более чем десятилетним опытом работы. Обладает глубокими знаниями о лучших практиках сервиса и комфорта в гостиничном сегменте, что подтверждается многочисленными публикациями и исследованиями в профильных изданиях. Является автором ряда статей, которые освещают актуальные тренды и направления в сфере туристического отдыха, включая подборки лучших отелей, основанные на реальных отзывах посетителей.</p>
                     <div class="author-badges">
                         <span class="badge expert">Эксперт</span>
                     </div>
@@ -44,32 +44,43 @@
             </div>
         </article>
 
-        <!-- Table Section (Placeholder) -->
+        <!-- Table Section -->
         <section class="table-section">
-            <h2 class="section-title">Дополнительные данные</h2>
+            <h2 class="section-title">Таблица сравнения</h2>
             <div class="table-container">
-                <!-- Таблица будет добавлена здесь при необходимости -->
-                <div class="table-placeholder">
-                    <p>Таблица данных будет размещена здесь</p>
-                </div>
+                <table>
+    <thead>
+        <tr>
+            <th>Название отеля</th>
+            <th>Средняя оценка</th>
+            <th>Средняя цена</th>
+            <th>Плюсы</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Сочи Парк Отель 3 *</td>
+            <td>4.6</td>
+            <td>от 6 500 руб.</td>
+            <td>Большая ухоженная территория, бесплатные шезлонги, подогреваемые бассейны, анимационные программы</td>
+        </tr>
+        <tr>
+            <td>Luciano Hotel & Spa Sochi 5 *</td>
+            <td>4.8</td>
+            <td>от 20 000 руб.</td>
+            <td>Роскошный дизайн номеров, собственный пляж, оздоровительные программы</td>
+        </tr>
+    </tbody>
+</table>
             </div>
         </section>
 
-        <!-- Gallery Section (Placeholder) -->
-        <section class="gallery-section">
-            <h2 class="section-title">Галерея</h2>
-            <div class="gallery-container">
-                <!-- Галерея изображений будет добавлена здесь при необходимости -->
-                <div class="gallery-placeholder">
-                    <p>Галерея изображений будет размещена здесь</p>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Footer -->
         <footer class="article-footer">
             <div class="footer-content">
-                <p>&copy; 2025 Егор Петров. Все права защищены.</p>
+                <p>&copy; 2025 Анастасия Белов. Все права защищены.</p>
                 <p class="footer-note">Экспертное мнение</p>
             </div>
         </footer>
